# PyJSClear

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_LICENSES.md  __init__.py  __main__.py  benchmark.md  deobfuscator.py  generator.py  parser.py  pyproject.toml  requirements.txt  scope.py  test-requirements.txt
.claude/: settings.local.json
.github/workflows/: fuzz.yml  publish.yml  tests.yml
pyjsclear/: __init__.py  __main__.py  deobfuscator.py  generator.py  parser.py  scope.py  traverser.py
pyjsclear/transforms/: aa_decode.py  anti_tamper.py  base.py  class_static_resolver.py  class_string_decoder.py  cleanup.py  constant_prop.py  control_flow.py  dead_branch.py  dead_class_props.py  dead_expressions.py  dead_object_props.py  else_if_flatten.py  enum_resolver.py  eval_unpack.py  expression_simplifier.py  global_alias.py  hex_escapes.py  hex_numerics.py  jj_decode.py  jsfuck_decode.py  logical_to_if.py  member_chain_resolver.py  noop_calls.py  nullish_coalescing.py  object_packer.py  object_simplifier.py  optional_chaining.py  property_simplifier.py  proxy_functions.py  reassignment.py  require_inliner.py  sequence_splitter.py  single_use_vars.py  string_revealer.py  unreachable_code.py  unused_vars.py  variable_renamer.py  xor_string_decode.py
pyjsclear/utils/: ast_helpers.py  string_decoders.py
tests/: conftest.py  test_regression.py  test_sample_regression.py
tests/fuzz/: build.sh  conftest_fuzz.py  fuzz_deobfuscate.py  fuzz_expression_simplifier.py  fuzz_generator.py  fuzz_parser.py  fuzz_scope.py  fuzz_string_decoders.py  fuzz_transforms.py  fuzz_traverser.py  requirements.txt  run_local.sh
tests/resources/: sample.deobfuscated.js
tests/resources/regression_samples/: control_flow_flatten.js  split_strings.js  string_hex_index.js  string_multiple.js  string_to_unicode.js
tests/resources/test_samples/: string_array_shuffle_number_expressions.js
tests/unit/: conftest.py  deobfuscator_test.py  generator_test.py  init_test.py  main_test.py  parser_test.py  scope_test.py  traverser_test.py
tests/unit/transforms/: aa_decode_test.py  anti_tamper_test.py  base_test.py  class_static_resolver_test.py  class_string_decoder_test.py  cleanup_test.py  constant_prop_test.py  control_flow_test.py  dead_branch_test.py  dead_class_props_test.py  dead_expressions_test.py  dead_object_props_test.py  deobfuscator_prepasses_test.py  else_if_flatten_test.py  enum_resolver_test.py  eval_unpack_test.py  expression_simplifier_test.py  global_alias_test.py  hex_escapes_test.py  hex_numerics_test.py  interaction_test.py  jj_decode_test.py  jsfuck_decode_test.py  logical_to_if_test.py  member_chain_resolver_test.py  noop_calls_test.py  nullish_coalescing_test.py  object_packer_test.py  object_simplifier_test.py  optional_chaining_test.py  property_simplifier_test.py  proxy_functions_test.py  reassignment_test.py  require_inliner_test.py  (+7 more)
transforms/: anti_tamper.py  control_flow.py  dead_branch.py  expression_simplifier.py  hex_escapes.py  object_packer.py  object_simplifier.py  property_simplifier.py  proxy_functions.py  reassignment.py  sequence_splitter.py  string_revealer.py  unused_vars.py
utils/: ast_helpers.py  string_decoders.py
(+18 files in other folders)
