[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjsclear"
version = "0.1.0"
description = "Pure Python JavaScript deobfuscator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["esprima2>=5.0.1"]

[project.scripts]
pyjsclear = "pyjsclear.__main__:main"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
