[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjsclear"
dynamic = ["version"]
description = "Pure Python JavaScript deobfuscator"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["esprima2>=5.0.1"]

[project.scripts]
pyjsclear = "pyjsclear.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "pyjsclear.__version__"}

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
extend-exclude = 'tests/resources/'

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
schema_pattern = """(?s)\
(build|ci|docs|feat|fix|perf|refactor|style|test|chore|revert|bump)\
(\\(\\S+\\))?!?:\
( [^\\n\\r]+)\
((\\n\\n.*)|(\\s*))?$"""